namespace Strategy.Behaviour
{
    public interface IFlyBehaviour
    {
        void Fly();
    }
}