namespace Strategy.Behaviour
{
    public interface IQuackBehaviour
    {
        void Quack();
    }
}